Improved css with variables

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
 :root {
+  /* Colors */
   --brand-color: #e54725;
   --brand-text-color: #50545a;
+
+  /* Text */
+  --text-p: 1rem;
+  --text-h1: 3rem;
   --hero-h1: 5rem;
+  --text-h2: 2rem;
+  --text-h3: 1.75rem;
+  --text-h4: 1.5rem;
+
+  /* Images and Icons */
   --hero-logo: 6rem;
 }
 
@@ -11,6 +21,26 @@
 
 body {
   font-family: "Lato", sans-serif;
+}
+
+p {
+  font-size: var(--text-p);
+}
+
+h1 {
+  font-size: var(--text-h1);
+}
+
+h2 {
+  font-size: var(--text-h2);
+}
+
+h3 {
+  font-size: var(--text-h3);
+}
+
+h4 {
+  font-size: var(--text-h4);
 }
 
 /* ------------------------- Colors */
@@ -252,7 +282,15 @@ footer a:hover {
 
 @media (max-width: 420px) {
   :root {
+    /* Text */
+    --text-p: 0.9rem;
+    --text-h1: 2rem;
     --hero-h1: 3rem;
+    --text-h2: 1.5rem;
+    --text-h3: 1.25rem;
+    --text-h4: 1.2rem;
+
+    /* Images & Logos */
     --hero-logo: 4rem;
   }
 
