--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,7 +124,22 @@ header {
   color: #fff;
 }
 
-/* ------------------------- Index Hero Section */
+/* ------------------------- Hero Section */
+
+.hero-img-index {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("https://i.imgur.com/ZnyFklO.jpg");
+}
+
+.hero-img-slack {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("https://i.imgur.com/zm38JBN.jpg");
+}
+
+.hero-img-topics {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("https://i.imgur.com/4XKa50N.jpg");
+}
 
 .hero {
   width: 100vw;
@@ -133,8 +148,6 @@ header {
   justify-content: center;
   align-items: center;
   color: white;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://i.imgur.com/ZnyFklO.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -265,70 +278,9 @@ p {
 
 /* ------------------------- Slack Page Hero */
 
-.hero-slack {
-  width: 100vw;
-  height: 90vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://i.imgur.com/zm38JBN.jpg");
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
-.hero-slack h1 {
-  font-size: var(--hero-h1);
-  margin-bottom: 1.5rem;
-}
-
-.hero-slack h2 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.hero-slack .btn {
-  padding: 0.5rem;
-  margin-top: 2rem;
-}
-
-.hero-slack .btn-slack {
+.hero .btn-slack {
   width: 19rem;
   font-size: var(--text-h4);
-}
-
-/* ------------------------- Topics Page Hero */
-
-.hero-topics {
-  width: 100vw;
-  height: 90vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://i.imgur.com/4XKa50N.jpg");
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
-.hero-topics h1 {
-  font-size: var(--hero-h1);
-  margin-bottom: 1.5rem;
-}
-
-.hero-topics h2 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.hero-topics h3 {
-  font-weight: 300;
 }
 
 /* ------------------------- Footer */
