--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,7 +56,8 @@ h4 {
 }
 
 header {
-  /* box-shadow: 0 2px 9px 0 rgba(0, 0, 0, 0.21); */
+  z-index: 10;
+  box-shadow: 0 2px 9px 0 rgba(0, 0, 0, 0.21);
   background: #fff;
 }
 
@@ -164,6 +165,7 @@ header {
 
 .hero-signup form {
   text-align: left;
+  margin-bottom: 3rem;
 }
 
 .hero-signup .privacy {
@@ -187,7 +189,7 @@ i {
 
 .hero-signup i {
   font-size: var(--hero-h1);
-  margin-top: 1rem;
+  margin-top: 3rem;
 }
 
 .hero-signup .btn {
