Small css improvement to help page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -361,8 +361,8 @@ p {
   margin-bottom: 1.5rem;
 }
 
-.hero-help h2 {
-  margin-bottom: 2rem;
+.hero-help h3 {
+  margin-top: 2.5rem;
 }
 
 /* ------------------------- Footer */
