--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,6 +61,16 @@ a {
   color: var(--brand-color);
 }
 
+.hero-faq p {
+  color: var(--brand-text-color);
+}
+
+.hero-faq h1,
+h3,
+a {
+  color: var(--brand-color);
+}
+
 .navbar-light .navbar-nav .active > .nav-link {
   color: var(--brand-color);
 }
@@ -237,6 +247,7 @@ span {
 
 .hero h3 {
   font-weight: 300;
+  color: #fff;
 }
 
 .col-12.col-lg-2.hero-logo {
@@ -362,6 +373,21 @@ p {
 }
 
 .hero-help h3 {
+  margin-top: 2.5rem;
+}
+
+/* ------------------------- FAQ Page */
+
+.hero-faq {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.hero-faq h1 {
+  margin-bottom: 1.5rem;
+}
+
+.hero-faq h3 {
   margin-top: 2.5rem;
 }
 
