--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -396,6 +396,11 @@ p {
   margin-top: 2.5rem;
 }
 
+.hero-help a:hover {
+  color: var(--brand-color);
+  text-decoration: none;
+}
+
 /* ------------------------- FAQ Page */
 
 .hero-faq {
@@ -409,6 +414,11 @@ p {
 
 .hero-faq h3 {
   margin-top: 2.5rem;
+}
+
+.hero-faq a:hover {
+  color: var(--brand-color);
+  text-decoration: none;
 }
 
 /* ------------------------- Footer */
@@ -429,11 +439,19 @@ footer .row {
 footer a {
   text-decoration: none;
   color: #fff;
+  padding-bottom: 0.8rem;
 }
 
 footer a:hover {
   text-decoration: none;
   color: #fff;
+  border-bottom: 1px solid #fff;
+}
+
+footer .footer-logo a:hover {
+  text-decoration: none;
+  color: #fff;
+  border-bottom: 1px solid var(--brand-color);
 }
 
 .button-message {
