--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -610,4 +610,22 @@ footer .footer-logo a:hover {
     margin-top: 1rem;
     margin-bottom: 1rem;
   }
+
+  .hero-topics {
+    background-size: auto 100%;
+    height: 70vh;
+    background-position: 0 -10rem;
+  }
+
+  .hero-slack {
+    background-size: auto 100%;
+    height: 70vh;
+    background-position: center;
+  }
+
+  .hero-index {
+    background-size: auto 100%;
+    height: 70vh;
+    background-position: center;
+  }
 }
