Improved topics main section mobile margins

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -628,4 +628,9 @@ footer .footer-logo a:hover {
     height: 70vh;
     background-position: center;
   }
+
+  .sprints {
+    width: 80vw;
+    margin: 3rem auto 5rem auto;
+  }
 }
