--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -613,19 +613,19 @@ footer .footer-logo a:hover {
 
   .hero-topics {
     background-size: auto 100%;
-    height: 70vh;
-    background-position: 0 -10rem;
+    height: 80vh;
+    background-position: center;
   }
 
   .hero-slack {
     background-size: auto 100%;
-    height: 70vh;
+    height: 80vh;
     background-position: center;
   }
 
   .hero-index {
     background-size: auto 100%;
-    height: 70vh;
+    height: 80vh;
     background-position: center;
   }
 
