--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -612,20 +612,20 @@ footer .footer-logo a:hover {
   }
 
   .hero-topics {
-    background-size: auto 100%;
-    height: 80vh;
+    background-size: auto;
+    height: 90vh;
     background-position: center;
   }
 
   .hero-slack {
-    background-size: auto 100%;
-    height: 80vh;
+    background-size: auto;
+    height: 90vh;
     background-position: center;
   }
 
   .hero-index {
-    background-size: auto 100%;
-    height: 80vh;
+    background-size: auto;
+    height: 90vh;
     background-position: center;
   }
 
