--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -624,7 +624,7 @@ footer .footer-logo a:hover {
   }
 
   .hero-index {
-    background-size: initial;
+    background-size: auto 100%;
     height: 90vh;
     background-position: center;
   }
