--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -612,13 +612,13 @@ footer .footer-logo a:hover {
   }
 
   .hero-topics {
-    background-size: auto;
+    background-size: auto 100%;
     height: 90vh;
     background-position: center;
   }
 
   .hero-slack {
-    background-size: auto;
+    background-size: auto 100%;
     height: 90vh;
     background-position: center;
   }
