--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -505,7 +505,8 @@ p {
 }
 
 footer .row {
-  margin-top: 1.3rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 footer a {
@@ -536,6 +537,7 @@ footer .footer-logo a:hover {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   font-size: 0.9rem;
+  line-height: 1rem;
 }
 
 .btn-light {
