--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -546,6 +546,8 @@ footer .footer-logo a:hover {
 
 /* ------------------------- Media Queries */
 
+/* For Smartphones */
+
 @media (max-width: 420px) {
   :root {
     /* Text */
@@ -588,6 +590,8 @@ footer .footer-logo a:hover {
     width: 90vw;
   }
 }
+
+/* For Tablets */
 
 @media (max-width: 991px) {
   :root {
